Minor fix to make select input responsive

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div>
           <label for="country">Country</label>
           <select name="country" id="country" class="fontawesome" required>
-            <option value="" disabled selected hidden>&#xf0ac;&nbsp;&nbsp;&nbsp;Your country</option>
+            <option value="" disabled selected hidden>&#xf0ac;&nbsp;&nbsp;Your country</option>
             <option value="Spain">Spain</option>
             <option value="France">France</option>
             <option value="Germany">Germany</option>
@@ -93,7 +93,7 @@
         </div>
         <div>
           <label for="postalcode">Postal code</label>
-          <input name="postalcode" class="fontawesome" id="postalcode" placeholder="&#xf01c;&nbsp;&nbsp;&nbsp;Your postal code">
+          <input name="postalcode" class="fontawesome" id="postalcode" placeholder="&#xf01c;&nbsp;&nbsp;Your postal code">
         </div>
       </div>
       <div class="save-box">
